--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: url('file:///Users/olive/Desktop/web%20development/Side%20projects/Space%20tourism/space-tourism-website-main/space-tourism/assets/home/background-home-desktop.jpg') no-repeat center center fixed;
+    background: url('space-tourism/assets/home/background-home-desktop.jpg') no-repeat center center fixed;
     color: white;
     font-family: 'Barlow Condensed', sans-serif;
     font-size: 1rem;
