--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 body {
-    background: url('../assets/home/background-home-desktop.jpg') no-repeat center center fixed;
+    background: url('css/background-home-desktop.jpg') no-repeat center center fixed;
     color: white;
     font-family: 'Barlow Condensed', sans-serif;
     font-size: 1rem;
